# try-rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: publish-crates.yml  update_aur.yml  vhs.yml
src/: cli.rs  config.rs  main.rs  shell.rs  tui.rs  utils.rs
