[package]
name = "try-rs"
version = "0.1.5"
edition = "2024"

description = "Temporary workspace manager for fast experimentation in the terminal"
readme = "README.md"
license = "MIT"
repository = "https://github.com/tassiovirginio/try-rs"

keywords = ["cli", "workspace", "tui", "rust"]
categories = ["command-line-utilities"]


[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
